welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: class Array takes type parameters
def ligne(tabColor:Array){
                   ^Array1:20: error: class Array takes type parameters
def ligne(tabColor:Array){
                   ^